--- a/final/case_register/templates/case_register/case_form.html
+++ b/final/case_register/templates/case_register/case_form.html
@@ -88,17 +88,17 @@
         </div>
         <div class="row">
             <div class="col-md-5">
-                <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i>Submit</button>    
+                <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i>Submit</button>
             </div>
-           
+
         </div>
     </form>
     {% else %}
           <a class="btn btn-dark" href="{% url 'login'  %}">Login Here! </a>
     {% endif %}
 <div class="made-with-love">
-  Made with
-  <i>♥</i> by
+  Developed
+   by
   <a target="_blank" href="https://www.instagram.com/itz.me.sandeep/">Sandeep Parmar</a>
 </div>
 
