--- a/final/case_register/templates/case_register/case_list.html
+++ b/final/case_register/templates/case_register/case_list.html
@@ -14,9 +14,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gijgo/1.9.13/combined/js/gijgo.min.js"></script>
     <link rel="stylesheet" href="{% static 'case_register/css/master1.css' %}">
-    
+
 </head>
- <nav class="navbar navbar-expand-lg navbar-light bg-light">    
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class=" navbar-brand" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -65,9 +65,13 @@
                     <th>Surveyor</th>
                     <th>Status</th>
                     <th>Remarks</th>
+                    {% if perms.case_register.add_case %}
                     <th>
                         <a href="{% url 'case_insert' %}" class="btn btn-outline-success">Create Case</a>
                     </th>
+                    {% else %}
+                    <th>Access Denied!</th>
+                    {% endif %}
                 </tr>
             </thead>
         </table>
@@ -85,9 +89,13 @@
                         <td>{{filter.surveyorlist}}</td>
                         <td>{{filter.status}}</td>
                         <td>{{filter.remarks}}</td>
+                        {% if perms.case_register.change_case %}
                         <td>
                             <a href="{% url 'case_update' filter.id %}" class="btn text-secondary px-0"><i class="far fa-edit fa-lg"></i></a>
                         </td>
+                        {% else %}
+                        <td>Access Denied!</td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
             </tbody>
@@ -95,9 +103,9 @@
     </div>
 </section>
 <div class="made-with-love">
-  Made with
-  <i>♥</i> by
-  <a target="_blank" href="https://www.instagram.com/itz.me.sandeep/">Sandeep Parmar</a>
+ Developed
+   by
+  <a target="_blank" class=".btn-xs" href="https://www.instagram.com/itz.me.sandeep/">Sandeep Parmar</a>
 </div>
 
 <script src="{% static 'case_register/js/master.js' %}" type="text/javascript"></script>
@@ -118,7 +126,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gijgo/1.9.13/combined/js/gijgo.min.js"></script>
     <link rel="stylesheet" href="{% static 'case_register/css/master1.css' %}">
 </head>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">    
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -126,9 +134,8 @@
        <a class="nav-link" href="{% url 'login'%}">Login </a>
       </li>
       </ul>
-  
+
   </div>
 </nav>
 {% endif %}
-    
-     
+
